# python-testing

./: README.md  pyproject.toml
src/phonebook/: phonebook_processor_pytest.py  phonebook_processor_unittest.py
src/test_doubles/: demo_dummy.py  demo_fake.py  demo_spy.py  demo_stub.py
tests/: conftest.py  test_demo_dummy.py  test_demo_fake.py  test_demo_spy.py  test_demo_stub.py  test_phonebook_processor_pytest.py  test_phonebook_processor_unittest.py
